update boot 3.x